--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Run only on main 
-        if: ${{ github.ref == 'refs/head/main'}}
+        if: ${{ github.ref == 'refs/heads/main'}}
         run:
           echo $GITHUB_REF
           
