--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,13 @@
-name: test-job
-on:
-  push:
-
+name: Context testing
+on: push
 jobs:
-  big-fix:
+  dump_contexts_to_log:
     runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, '/refs/heads/bugfix/*')}}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
           
 
       
