--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
 name: Context testing
 on: push
 jobs:
-  dump_contexts_to_log:
+  prod-deploy:
     runs-on: ubuntu-latest
+    if: ${{github.ref == '/refs/heads/main'}} && ${{github.repository.open_issues_count == 0 }}
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+    - name: Checkout 
+      uses: actions/checkout@v4
           
 
       
