--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,11 @@ on: push
 jobs:
   prod-deploy:
     runs-on: ubuntu-latest
-    if: ${{github.ref == '/refs/heads/main'}} && ${{github.repository.open_issues_count == 0 }}
+    if: ${{github.ref == '/refs/heads/main'}} && ${{github.repository.open_issues_count == '0' }}
     steps:
     - name: Checkout 
       uses: actions/checkout@v4
-      
+
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
