--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ jobs:
   prod-deploy:
     runs-on: ubuntu-latest
     # if: ${{ github.ref == 'refs/heads/main' && github.repository.has_issues == true }}
+    if: ${{ github.ref == 'refs/heads/main' }}    
     steps:
     - name: Checkout 
       uses: actions/checkout@v4
