--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Dump GitHub context
-      run: echo "env | grep GITHUB"
+      run:  env | grep GITHUB
           
 
       
