--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,12 @@ env:
 jobs:
   prod-deploy:
     runs-on: ubuntu-latest
-    if: ${{ env.ISSUES == 'true' }} 
     steps:
     - name: Checkout 
       uses: actions/checkout@v4
 
     - name: Dump GitHub context
-      run:  env | grep GITHUB
+      run:  echo $ISSUES
           
 
       
