--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - name: Notify 
       env:
-        NEEDS: ${{ toJson(job)}}
+        NEEDS: ${{ toJson(needs)}}
       run: |
         echo $NEEDS
           
