--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
 
   test:
     runs-on: ubuntu:latest
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,7 +32,7 @@ jobs:
       - uses: actions/download-artifact@main
         with:
           name: node_artifacts
-          
+
       - name: Install
         run: npm install
- 
+      
