--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         run: npm install
       
       - name: Build
-        run: npm build
+        run: npm run build
       
       - name: Upload build artifacts
         uses: actions/upload-artifact@main
@@ -33,6 +33,5 @@ jobs:
         with:
           name: node_artifacts
 
-      - name: Install
-        run: npm install
-      
+      - name: Test
+        run: npm test
