--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,32 +3,21 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Install
-        run: npm install
-      
-      - name: Build
-        run: npm run build
-      
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@main
-        with: 
-          name: node_artifacts
-          path: build.log
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-
-      
-      - uses: actions/download-artifact@main
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          name: node_artifacts
-          path: somedir/
-      - name: list
-        run: tree
-          
+          node-version: ${{ matrix.node-version }}
+
+      - name: npm install, and test
+        run: |
+          npm install
+          npm run build
+          npm test
