--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: npm install, and test
+      - name: npm install, and test ${{ matrix.node-version }}
         run: |
           npm install
           npm run build
           npm test
+          
