--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,13 @@
 name: CI
 on: push
 env:
-  FIRST_NAME: Tuco
+  FIRST_NAME: Salamanca
 jobs:
   prod-check:
     if: github.ref == 'refs/heads/main'
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Hello $Env:FIRST_NAME"
+      - run: echo "Nice work, $FIRST_NAME"
+        env:
+          FIRST_NAME: Tuco
 
