--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,8 @@ jobs:
     steps:
       - run: echo "Nice work, $FIRST_NAME"
         env:
-          FIRST_NAME: Tuco Salamanca
-
+          FIRST_NAME: Tuco
+      - name: debugging
+        if:  runner.debug == '1'
+        run: |
+          echo "Runner debug on"
