--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,27 @@
 name: CI
 on: push
-env:
-  FIRST_NAME: Salamanca
 jobs:
-  prod-check:
-    if: github.ref == 'refs/heads/main'
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Nice work, $FIRST_NAME"
-        env:
-          FIRST_NAME: Tuco
-      - name: debugging
-        if:  runner.debug == '1'
-        run: |
-          echo "Runner debug on"
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with: 
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+     
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ghcr.io/app:latest
