--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Workflow commands
+      - name: workflow commands logging messages
         run: |
-          echo "::workflow-command parameter1={data},parameter2={data}::{command value}"
+          echo "::debug::This is a debug message"
+          echo "This is an info message"
+          echo "::error::This is an error message"
+          echo "::warning::This is a warning message"  
