--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,33 @@
-name: CI
-on: push
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-    steps:
-      - name: Masking the env
-        id: set-secret
-        run: |
-          UUID=`uuidgen`
-          echo "::add-mask::$UUID"
-          echo "UUID=$UUID" >>$GITHUB_OUTPUT
+name: Generate and Pass Secret Between Jobs
 
-      - name: Validate the secret
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  job_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Generate a secret (for demonstration purposes)
+        id: generate_secret
         run: |
-          echo ${{ steps.set-secret.outputs.UUID }}
+          # Example of generating a secret (you can generate any secret here)
+          SECRET=$(echo "my_generated_secret_$(date +%s)")
+          echo "Generated secret: $SECRET"
+          # Set the generated secret as an output
+          echo "::set-output name=my_generated_secret::$SECRET"
+
+  job_2:
+    runs-on: ubuntu-latest
+    needs: job_1  # This job depends on job_1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Use the generated secret from job_1
+        run: |
+          echo "The secret passed from job_1 is: ${{ needs.job_1.outputs.my_generated_secret }}"
