--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           SECRET=$(echo "my_generated_secret_$(date +%s)")
           echo "Generated secret: $SECRET"
+          echo "::add-mask::$SECRET"
           echo "Masked secret: $SECRET"
           echo "my_generated_secret=$SECRET" >> "$GITHUB_OUTPUT"
     outputs:
