--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
     - name: Set the value in bash
       run: |
-        echo "### Hello world! :rocket:" 
+        echo ${{ vars.SOMEVAR }}
 
 
