--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   job_1: 
     runs-on: ubuntu-latest
+    environment:
+      name: Production
     steps:
     - name: Set the value in bash
       run: |
