--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Production
+      url: http://someurl.io
     steps:
     - name: Set the value in bash
       run: |
