--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -2,9 +2,28 @@ name: Reusable workflow
 on:
   workflow_call:
 jobs:
-  reuse1:
+  reuse_1:
     runs-on: ubuntu-latest
     steps:
-      - name: testing
+      - name: Deploy to stage
         run:  |
-          echo "Hello from the reuse job"
+          echo "Deployed to stage"
+
+  reuse_2:
+    runs-on: ubuntu-latest
+    needs: reuse_1
+    steps:
+      - name: Run tests
+        run: |
+          echo "testing completed"
+  
+  reuse_3:
+    runs_on: ubuntu-latest
+    needs: reuse_2
+    steps:  
+      - name: Deploy to production
+        run: |
+          echo "Deployed to prod"
+  
+
+  
