--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -18,7 +18,7 @@ jobs:
           echo "testing completed"
   
   reuse_3:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: reuse_2
     steps:  
       - name: Deploy to production
