--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,33 @@
-name: CI
-
 on:
- push:
-
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 jobs:
-  job_1: 
+  log-the-inputs:
     runs-on: ubuntu-latest
     steps:
-    - name: Set the value in bash
-      env:
-        GH: ${{ toJSON(github) }}
-      run: |
-        echo $GH
-  job_2:
-    needs: job_1
-    uses: ./.github/workflows/reuse.yml
-
-
+      - run: |
+          echo "Log level: $LEVEL"
+          echo "Tags: $TAGS"
+          echo "Environment: $ENVIRONMENT"
+        env:
+          LEVEL: ${{ inputs.logLevel }}
+          TAGS: ${{ inputs.tags }}
+          ENVIRONMENT: ${{ inputs.environment }}
