--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 on:
   workflow_dispatch:
+    outputs:
+      testing:
+        description: 'some output'
+        value: 'soemodd'
     inputs:
       logLevel:
         description: 'Log level'
@@ -18,6 +22,7 @@ on:
         description: 'Environment to run tests against'
         type: environment
         required: true
+
 
 jobs:
   log-the-inputs:
