--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,22 @@
-name: main-workflow
+name: Service container
 on:
-  workflow_dispatch:
-    outputs:
-      testing:
-        description: 'some output'
-        value: 'soemodd'
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
-
-
+  push:
 jobs:
-  log-the-inputs:
+  create-table:
     runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
+    services:
+      postgres:
+        image: postgres:latest
         env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Install psql client
+        run: |
+          sudo apt-get update && sudo apt-get install postgresql-client
+          psql --version
+
