--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Create tables
         run: |
-          PGPASSWORD=postgres psql -U postgres -d storedb -f script.sql
+          PGPASSWORD=postgres psql -h postgres -p 5432 -U postgres -d storedb -f script.sql
       
       - name: Validate
         run: |
-          PGPASSWORD=postgres psql -U postgres -d storedb -c "\dt"
+          PGPASSWORD=postgres psql -h postgres -p 5432 -U postgres -d storedb -c "\dt"
 
