--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
-      # - name: Install psql client
-      #   run: |
-      #     sudo apt-get update && sudo apt-get install postgresql-client
-      #     psql --version
+
+      - name: Create tables
+        run: |
+          PGPASSWORD=postgres psql -h postgres -p 5432 -U postgres -f script.sql
