--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,8 @@ jobs:
       - name: Create tables
         run: |
           PGPASSWORD=postgres psql -h postgres -p 5432 -U postgres -f script.sql
+
+      - name: Validate
+        run: |
+          uname -a
+          PGPASSWORD=postgres psql -h postgres -p 5432 -U postgres -d storedb -c "\dt"
