--- a/.github/workflows/service-container.yml
+++ b/.github/workflows/service-container.yml
@@ -1,4 +1,4 @@
-name: Service container 1
+name: Service Container
 on:
   push:
 jobs:
@@ -31,7 +31,7 @@ jobs:
         run: |
           PGPASSWORD=postgres psql -h localhost -p 5432 -U postgres -f script.sql
       
-      # - name: Validate
-      #   run: |
-      #     PGPASSWORD=postgres psql -h localhost -p 5432 -U postgres -d storedb -c "\dt"
+      - name: Validate
+        run: |
+          PGPASSWORD=postgres psql -h localhost -p 5432 -U postgres -d storedb -c "\dt"
 
