--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -1,11 +1,12 @@
 name: CodeQL
 on:
   push:
-  branches:
+   branches:
     - main
 jobs:
   codeql-scan:
     runs-on: ubuntu-latest
+    name: CodeQL
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
