--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,7 @@ jobs:
     name: Mark issues stale
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/stale@v1
-        with:
-          days-before-stale: 7
-          repo-token: ${{ github.token }}
+      - name: Request for approval
         requires:
           - approval
           
