--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,28 @@ on:
   push:
 
 jobs:
-  clean-up:
-    name: Mark issues stale
+  job-1:
+    name: Job 1
     runs-on: ubuntu-latest
     steps:
       - name: Request for approval
-        requires:
-          - approval
+        run: |
+          sleep 15
+
+  job-2:
+    name: Job 2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Request for approval
+        run: |
+          sleep 10
           
 
+  notify:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: [job-1, job-2]
+    steps:
+      - name: Request for approval
+        run: |
+          echo notify
