--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    needs: [job-1, job-2]
+    needs: job-2
+    if: failure()
     steps:
       - name: Request for approval
         run: |
