--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,16 @@ jobs:
     steps:
       - name: Request for approval
         run: |
-          slep 15
+          sleep 15
 
   job-2:
     name: Job 2
     runs-on: ubuntu-latest
+    needs: job-1
     steps:
       - name: Request for approval
         run: |
-          sleep 10
+          sle3p 10
           
 
   notify:
