--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
     needs: job-2
-    if: failure()
+    if: ${{ ! success() }}
     steps:
       - name: Request for approval
         run: |
