--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,29 +4,11 @@ on:
 
 jobs:
   job-1:
-    name: Job 1
+    name: List workflows
     runs-on: ubuntu-latest
     steps:
-      - name: Request for approval
+      - name: List workflows
         run: |
-          sleep 15
+          curl -H "Authorization: Bearer ${{ GITHUB_TOEKN }}"  https://api.github.com/repos/{owner}/{repo}/actions/workflows
 
-  job-2:
-    name: Job 2
-    runs-on: ubuntu-latest
-    needs: job-1
-    steps:
-      - name: Request for approval
-        run: |
-          sle3p 10
-          
 
-  notify:
-    name: Notify
-    runs-on: ubuntu-latest
-    needs: job-2
-    if: ${{ ! success() }}
-    steps:
-      - name: Request for approval
-        run: |
-          echo notify
