--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - name: List workflows
         run: |
-          curl -H "Authorization: Bearer $GITHUB_TOKEN"  https://api.github.com/repos/{owner}/{repo}/actions/workflows
+          curl -H "Authorization: Bearer ${{ secrets.PAT }}"  https://api.github.com/repos/${{ github.owner }}/${{github.repository }}/actions/workflows
 
 
