--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - name: List workflows
         run: |
-          curl -H "Authorization: Bearer ${{ secrets.PAT }}"  https://api.github.com/repos/${{ github.owner }}/${{github.repository }}/actions/workflows
+          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version: 2022-11-28"  https://api.github.com/repos/OWNER/REPO/actions/workflows
 
 
