--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
 
       - name: List workflows
         run: |
-          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version: 2022-11-28"  https://api.github.com/repos/${{ github.actor }}/${{ github.repository.name }}/actions/workflows
+          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.PAT }}" -H "X-GitHub-Api-Version: 2022-11-28"  https://api.github.com/repos/${{ github.actor }}/${{ github.event.repository.name }}/actions/workflows
 
 
