Enable continue-on-error for error generation step in workflow

--- a/.github/workflows/error.yml
+++ b/.github/workflows/error.yml
@@ -3,13 +3,14 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v4
 
       - name: Genereate an error
-        # continue-on-error: true
         run: |
           sle3p 10
+          
       - name: Get the uanme
         run: |
           uname -a
