Add deployment step to error handling workflow

--- a/.github/workflows/error.yml
+++ b/.github/workflows/error.yml
@@ -10,7 +10,14 @@ jobs:
       - name: Genereate an error
         run: |
           sle3p 10
-          
+
       - name: Get the uanme
         run: |
           uname -a
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
+        run: |
+          echo "Deploying the app"   
